--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
           <title> Jeux du Douda </title>
-          <script src="scrpitdouda.js"></script>
+          <script src="script.js"></script>
     </head>
     
     <body>
